<?php
declare(strict_types=1);

namespace Roots\WPConfig\Exceptions;

/**
 * Class ConstantAlreadyDefinedException
 * This should be thrown when a user attempts to define() a constant that has already been defined
 * @package Roots\Bedrock
 */
class ConstantAlreadyDefinedException extends \RuntimeException
{

}
