<?php
declare(strict_types=1);

namespace Roots\WPConfig\Exceptions;

class UndefinedConfigKeyException extends \RuntimeException
{
  
}
